--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@ wt_prod-19015/*
 book/*
 *.pdf
 db.sqlite3
-static/aline
-static/wt_prod
-static/newsletter
-static/com
-static/ok
-static/ckeditor
+static/aline/*
+static/wt_prod/*
+static/newsletter/*
+static/com/*
+static/ok/*
+static/ckeditor/*
+static/prod/*
+static/star-ratings/*
