--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 ola.json
 wt_prod-19015/*
-*.jpeg
 book/*
 *.pdf
 db.sqlite3
-static/aline/*
-static/wt_prod/*
-static/newsletter/*
-static/com/*
-static/ok/*
-static/ckeditor/*
-static/prod/*
-static/star-ratings/*
+school/static/aline/*
+school/static/wt_prod/*
+school/static/newsletter/*
+school/static/com/*
+school/static/ok/*
+school/static/ckeditor/*
+school/static/prod/*
+school/static/star-ratings/*
+*.zip
